--- a/MRM/Views/TacticCampaign/tacticdigital.cshtml
+++ b/MRM/Views/TacticCampaign/tacticdigital.cshtml
@@ -44,7 +44,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Source</label><span class="text-danger Industrymanage-mandate">*</span>
+                                    <label>Source</label><span class="text-danger">*</span>
 
                                     <div class="form-group">
                                         <input type="text" id="txtSource" value="" class="form-control" placeholder="Source" />
@@ -54,7 +54,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Content</label><span class="text-danger Industrymanage-mandate">*</span>
+                                    <label>Content</label><span class="text-danger">*</span>
                                     <div class="form-group">
                                         <input type="text" id="txtContent" value="" class="form-control" placeholder="Content" />
                                         <div id="dvContent"></div>
@@ -67,7 +67,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Medium</label><span class="text-danger Industrymanage-mandate">*</span>
+                                    <label>Medium</label><span class="text-danger">*</span>
                                     <div class="form-group">
                                         <input type="text" id="txtMedium" value="" class="form-control" placeholder="Medium" />
                                         <div id="dvMedium"></div>
@@ -76,7 +76,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Terms</label><span class="text-danger Industrymanage-mandate">*</span>
+                                    <label>Terms</label><span class="text-danger">*</span>
                                     <div class="form-group">
                                         <input type="text" id="txtTerms" value="" class="form-control" placeholder="Terms" />
                                         <div id="dvTerms"></div>
