--- a/MRM/Views/TacticCampaign/tacticdigital.cshtml
+++ b/MRM/Views/TacticCampaign/tacticdigital.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using MRM.ViewModel
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -26,7 +26,7 @@
                                 <div class="form-group">
                                     <label>Tactic Name</label>
                                     <div class="form-group">
-                                        <input id="txtTacticName" type="text" value="" class="form-control" placeholder="Tactic Name" disabled="disabled" />
+                                        <input id="txtTacticName" type="text" value="" class="form-control" placeholder="Tactic Name" disabled="disabled" />                                        
                                     </div>
                                 </div>
                             </div>
@@ -106,6 +106,7 @@
                                                     <td>Medium</td>
                                                     <td>Content</td>
                                                     <td>Term</td>
+                                                    <td>Status</td>
                                                     <td>Action</td>
                                                 </tr>
                                             </thead>
@@ -129,8 +130,8 @@
         <div class="modal-footer">
             <div>
                 <input type="button" onclick="return fDeleteDigitalpoint();" class="btn btn-danger" value="Delete" />
-                @*<input type="button" class="btn btn-primary" value="Save Draft" />*@
-                <input type="button" onclick="return savedigitalpoint();" class="btn btn-info" value="Submit & Export" />
+                <input type="button" onclick="return savedigitalpoint('@InheritStatus.Draft.ToString()');" class="btn btn-primary" value="Save Draft" />
+                <input type="button" onclick="return savedigitalpoint('@InheritStatus.Complete.ToString()');" class="btn btn-info" value="Submit & Export" />
                 <button id="btnclose" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
         </div>
