--- a/MRM/Views/TacticCampaign/tacticdigital.cshtml
+++ b/MRM/Views/TacticCampaign/tacticdigital.cshtml
@@ -134,7 +134,7 @@
                 @*<input type="button" onclick="return fDeleteDigitalpoint();" class="btn btn-danger delete" value="Delete" />*@
                 <input id="btnSave" disabled="disabled" type="button" onclick="return savedigitalpoint('@InheritStatus.Draft.ToString()');" class="btn btn-primary" value="Save Draft" />
                 <input id="btnsubmit" disabled="disabled"  type="button" onclick="return savedigitalpoint('@InheritStatus.Complete.ToString()');" class="btn btn-info" value="Submit & Export" />
-                <button id="btnclose" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="btnclose" disabled="disabled" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
