commit multi bg

--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -97,6 +97,11 @@
         GetSubCampaignType();
 
         MasterChildNotSelected();
+
+
+
+
+
     };
     var functionName = function () {
         /* your code here */
@@ -242,7 +247,7 @@
             $select.attr('multiple', 'multiple');
             $select.chosen();
 
-            $('a[data-target-id="BusinessGroups_Id"]').show();
+            $('a[data-target-id="BusinessGroups_Id"]').hide();
             $('a[data-target-id="Segments_Id"]').hide();
             $('.manage-mandate').show();
         }
